5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1679_1100.log
== TEST (2019-04-16 23:15:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input"valor da cedula:")
print(valor)

-- ERROR:
File "XXXX", line 4
    valor = int(input"valor da cedula:")
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:15:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula:"))
print(valor)

-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:19:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: (2/5/10/20/50/100)"))

print(valor)

-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:20:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))
print(valor)


-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:25:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if( valor == 2):
	print(valor)
	print("Tartaruga")
elif( valor == 5):
	print(valor)
	print("Garça")
	


-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:27:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if( valor == 2):
	print(valor)
	print("Tartaruga")
elif( valor == 5):
	print(valor)
	print("Garça")
	


-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:27:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if( valor == 2):
	print(valor)
	print("Tartaruga")
	elif( valor == 5):
		print(valor)
		print("Garça")
	


-- ERROR:
File "XXXX", line 9
    elif( valor == 5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:28:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if( valor == 2):
	print(valor)
	print("Tartaruga")
	elif:
		valor == 5
		print(valor)
		print("Garça")
	


-- ERROR:
File "XXXX", line 9
    elif:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:28:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if( valor == 2):
	print(valor)
	print("Tartaruga")
elif:
		valor == 5
		print(valor)
		print("Garça")
	


-- ERROR:
File "XXXX", line 9
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:29:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if( valor == 2):
	print(valor)
	print("Tartaruga")
elif:
	valor == 5
	print(valor)
	print("Garça")
	


-- ERROR:
File "XXXX", line 9
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:29:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if( valor == 2):
	print(valor)
	print("Tartaruga")
elif(valor == 5):
	valor == 5
	print(valor)
	print("Garça")
	


-- ERROR:
File "XXXX", line 9
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:30:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if( valor == 2):
	print(valor)
	print("Tartaruga")
elif(valor == 5):
	valor == 5
	print(valor)
	print("Garca")
	


-- ERROR:
File "XXXX", line 9
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:37:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print(valor)
	print("Tartaruga")
elif(valor == 5):
	valor == 5
	print(valor)
	print("Garca")
	


-- ERROR:
File "XXXX", line 9
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:38:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print(valor)
	print("Tartaruga")
elif(valor == 5):
	print(valor)
	print("Garca")
	


-- ERROR:
File "XXXX", line 9
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 23:44:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoua")
	


-- EXECUTION TIME:
0.185439
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoua
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:44:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoua")
	


-- OUTPUT:
Entrada: 100
Animal: Garoua
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:46:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoua")
	


-- OUTPUT:
Entrada: 100
Animal: Garoua
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:46:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoua")
	


-- OUTPUT:
Entrada: 100
Animal: Garoua
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 23:46:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoua")
	


-- EXECUTION TIME:
0.130344
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoua
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:47:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoua")
	


-- OUTPUT:
Entrada: 100
Animal: Garoua
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:48:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoua")
	


-- OUTPUT:
Entrada: 100
Animal: Garoua
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:48:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoua")
	


-- OUTPUT:
Entrada: 100
Animal: Garoua
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:48:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garça")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoua")
	


-- OUTPUT:
Entrada: 100
Animal: Garoua
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:49:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoua")
	


-- OUTPUT:
Entrada: 100
Animal: Garoua
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:49:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoua")
	


-- OUTPUT:
Entrada: 100
Animal: Garoua
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:49:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoua")
	


-- OUTPUT:
Entrada: 100
Animal: Garoua
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:50:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoua")
	


-- OUTPUT:
Entrada: 100
Animal: Garoua
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:50:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoua")
	


-- OUTPUT:
Entrada: 100
Animal: Garoua
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 23:50:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoua")
	


-- OUTPUT:
Entrada: 100
Animal: Garoua
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 23:51:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoupa")
	


-- EXECUTION TIME:
0.130518
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:10:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoupa")
	


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:10:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoupa")
	


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:10:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoupa")
	


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:10:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoupa")
	


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:10:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoupa")
	


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:10:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoupa")
	


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:10:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoupa")
	


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:10:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoupa")
	


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:19:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoupa")
	


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:58:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoupa")
	


-- EXECUTION TIME:
0.127191
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:58:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoupa")
	


-- EXECUTION TIME:
0.197017
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
valor da cedula: Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
valor da cedula: Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
valor da cedula: Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:58:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoupa")
	


-- EXECUTION TIME:
0.128841
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:05:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("valor da cedula: "))

if(valor != 2 and valor != 5 and valor != 10 and valor != 20 and valor != 50 and valor != 100 ):
	print("Entrada:",valor)
	print("Animal:","Invalido")

elif( valor == 2):
	print("Entrada:",valor)
	print("Animal:","Tartaruga")
elif(valor == 5):
	print("Entrada:",valor)
	print("Animal:","Garca")
elif(valor == 10):
	print("Entrada:",valor)
	print("Animal:","Arara")
elif(valor == 20):
	print("Entrada:",valor)
	print("Animal:","Mico-leao-dourado")
elif(valor == 50):
	print("Entrada:",valor)
	print("Animal:","Onca-pintada")
elif(valor == 100):
	print("Entrada:",valor)
	print("Animal:","Garoupa")
	


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
